<resources>
    <string name="app_name">Meeting Ref App</string>

    <!-- Set Up Screen -->
    <string name="participant_name">Participant Name</string>
    <string name="empty_participant_name_error">Please input a valid name</string>
    <string name="server_name">Server</string>
    <string name="empty_server_name_error">Please input a valid server name</string>
    <string name="meeting_guid">Meeting GUID</string>
    <string name="empty_meeting_guid_error">Please input a valid Meeting GUID</string>
    <string name="join_meeting_title">Join Meeting</string>

    <!-- Meeting Fragment -->
    <string name="choose_devices_title">Choose Meeting Inputs</string>
    <string name="audio_input_device">Audio Input</string>
    <string name="audio_output_device">Audio Output</string>
    <string name="video_input_device">Video Input</string>
    <string name="video_codec_device">Video Codec</string>
    <string name="enable_screen_capture">Screen Share: ON</string>
    <string name="disable_screen_capture">Screen Share: OFF</string>
    <string name="enable_inputs_title">Enable</string>

    <string name="attendees_menu_title">View Attendees</string>
    <string name="attendees_bottom_sheet_title_default">0  ATTENDEE(S)</string>
    <string name="attendees_bottom_sheet_title">%1$d  ATTENDEE(S)</string>

    <string name="camera_error">Video Error</string>
    <string name="camera_error_desc">A camera error caused your video to stop sending.\nDo you want to restart?</string>

    <!-- Network Camera Bottom Sheet -->
    <string name="manage_network_camera">Manage Network Cameras</string>
    <string name="network_camera_title">NETWORK CAMERAS</string>
    <string name="add_network_camera">Add Network Camera:</string>
    <string name="clear_network_cameras">Clear Network Cameras</string>
    <string name="unable_network_camera">Unable to add network camera</string>

    <!-- Video Stream & Site Info -->
    <string name="site_title">Site:</string>
    <string name="device_title">Device:</string>
    <string name="email_title">Email:</string>
    <string name="name_title">Name:</string>
    <string name="codec_title">Codec:</string>
    <string name="active_title">Active</string>
    <string name="local_title">Local</string>
    <string name="enable_video_stream">Enable Stream</string>
    <string name="disable_video_stream">Disable Stream</string>

    <!-- Content Descriptions -->
    <string name="logo_cd">Visionable Logo</string>
    <string name="mute_icon_cd">Mute Icon</string>
    <string name="close_icon_cd">Close View Attendee Bottom Sheet</string>
    <string name="toggle_bottom_sheet_icon_cd">Toggle Bottom Sheet Icon</string>

    <!-- Alert Dialogs -->
    <string name="join_meeting_alert_title">Unable to Join Meeting</string>
    <string name="init_meeting_alert_message">Please restart the app &amp; ensure that you’ve inputted a valid server name and meeting GUID</string>

    <string name="enable_audio_alert_title">Unable to Enable Local Audio</string>
    <string name="audio_permission_alert_message">Please try again, and allow the app the requested audio permission.</string>
    <string name="launch_local_audio_message">Please try again. If the issue persists, try choosing different audio devices or restarting app.</string>

    <string name="enable_video_alert_title">Unable to Enable Local Video</string>
    <string name="video_permission_alert_message">Please try again, and allow the app the requested video permission.</string>
    <string name="launch_local_video_message">Please try again. If the issue persists, try choosing different video devices/codecs or restarting app.</string>

    <string name="change_camera_alert_title">Unable to Change Video Camera</string>

    <string name="resolution_alert_title">Unable to Change Video Resolution</string>
    <string name="resolution_alert_message">Please ensure that the selected camera works with the chosen resolution.</string>
    <string name="use_token">Use V3 API</string>

    <string-array name="devices_array">
        <item>Default Device</item>
    </string-array>

</resources>
