<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/close_icon_margin"
        android:layout_marginEnd="@dimen/close_icon_margin"
        android:src="@drawable/close_icon"
        android:contentDescription="@string/close_icon_cd"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/site_text_input"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/title_tv_vert_margin"
        android:layout_marginHorizontal="@dimen/title_tv_hor_margin"
        android:hint="@string/site_title"
        app:layout_constraintTop_toBottomOf="@id/close_btn"
        app:layout_constraintBottom_toTopOf="@id/device_text_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/site_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_text_input"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/title_tv_vert_margin"
        android:layout_marginHorizontal="@dimen/title_tv_hor_margin"
        android:hint="@string/device_title"
        app:layout_constraintTop_toBottomOf="@id/site_text_input"
        app:layout_constraintBottom_toTopOf="@id/email_text_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/device_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/title_tv_vert_margin"
        android:layout_marginHorizontal="@dimen/title_tv_hor_margin"
        android:hint="@string/email_title"
        app:layout_constraintTop_toBottomOf="@id/device_text_input"
        app:layout_constraintBottom_toTopOf="@id/name_text_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_text_input"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/title_tv_vert_margin"
        android:layout_marginHorizontal="@dimen/title_tv_hor_margin"
        android:hint="@string/name_title"
        app:layout_constraintTop_toBottomOf="@id/email_text_input"
        app:layout_constraintBottom_toTopOf="@id/codec_text_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codec_text_input"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/title_tv_vert_margin"
        android:layout_marginHorizontal="@dimen/title_tv_hor_margin"
        android:hint="@string/codec_title"
        app:layout_constraintTop_toBottomOf="@id/name_text_input"
        app:layout_constraintBottom_toTopOf="@id/checkbox_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codec_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/checkbox_barrier"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="active_checkbox, local_checkbox" />

    <CheckBox
        android:id="@+id/active_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/site_info_checkbox_margin"
        android:text="@string/active_title"
        android:clickable="false"
        app:layout_constraintTop_toBottomOf="@id/codec_text_input"
        app:layout_constraintBottom_toTopOf="@id/button_barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/local_checkbox" />

    <CheckBox
        android:id="@+id/local_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/site_info_checkbox_margin"
        android:text="@string/local_title"
        android:clickable="false"
        app:layout_constraintTop_toBottomOf="@id/codec_text_input"
        app:layout_constraintBottom_toTopOf="@id/button_barrier"
        app:layout_constraintStart_toEndOf="@id/active_checkbox"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/button_barrier"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="enable_stream_button, disable_stream_button" />

    <Button
        android:id="@+id/enable_stream_button"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/site_info_button_margin"
        android:gravity="center"
        android:text="@string/enable_video_stream"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/disable_stream_button" />

    <Button
        android:id="@+id/disable_stream_button"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/site_info_button_margin"
        android:gravity="center"
        android:text="@string/disable_video_stream"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_grey"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/enable_stream_button"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
