<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/init_meeting_cv"
    android:layout_width="@dimen/match_constraint"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/cardview_elevation"
    app:cardCornerRadius="@dimen/cardview_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/cardview_inner_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/participant_name_input"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/join_meeting_edit_margin"
            android:hint="@string/participant_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/server_name_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/server_name_input"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/join_meeting_edit_margin"
            android:hint="@string/server_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/participant_name_input"
            app:layout_constraintBottom_toTopOf="@id/meeting_guid_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/meeting_guid_input"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/join_meeting_edit_margin"
            android:hint="@string/meeting_guid"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/server_name_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/meeting_token_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_token"
            android:layout_marginStart="4dp"
            android:buttonTint="@color/navy_blue_light"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/meeting_guid_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
