<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/choose_devices_cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="@dimen/cardview_elevation"
    app:cardCornerRadius="@dimen/cardview_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/cardview_inner_padding">

        <TextView
            android:id="@+id/choose_devices_title_tv"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_text_margin"
            android:gravity="center"
            android:text="@string/choose_devices_title"
            android:textSize="@dimen/cardview_title_font_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/audio_input_spinner" />

        <TextView
            android:id="@+id/audio_input_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardview_margin"
            android:layout_marginVertical="@dimen/cardview_text_margin"
            android:gravity="center"
            android:text="@string/audio_input_device"
            android:textSize="@dimen/cardview_subtitle_font_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/audio_input_spinner"
            app:layout_constraintBottom_toBottomOf="@id/audio_input_spinner"/>

        <TextView
            android:id="@+id/audio_output_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardview_margin"
            android:layout_marginVertical="@dimen/cardview_text_margin"
            android:gravity="center"
            android:text="@string/audio_output_device"
            android:textSize="@dimen/cardview_subtitle_font_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/audio_output_spinner"
            app:layout_constraintBottom_toBottomOf="@id/audio_output_spinner"/>

        <TextView
            android:id="@+id/video_input_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardview_margin"
            android:layout_marginVertical="@dimen/cardview_text_margin"
            android:gravity="center"
            android:text="@string/video_input_device"
            android:textSize="@dimen/cardview_subtitle_font_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/video_input_spinner"
            app:layout_constraintBottom_toBottomOf="@id/video_input_spinner" />

        <TextView
            android:id="@+id/video_codec_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardview_margin"
            android:layout_marginVertical="@dimen/cardview_text_margin"
            android:gravity="center"
            android:text="@string/video_codec_device"
            android:textSize="@dimen/cardview_subtitle_font_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/video_codec_spinner"
            app:layout_constraintBottom_toBottomOf="@id/video_codec_spinner" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/device_selection_barrier"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:barrierDirection="end"
            app:constraint_referenced_ids="audio_input_tv, audio_output_tv, video_input_tv, video_codec_tv" />

        <Spinner
            android:id="@+id/audio_input_spinner"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/choose_devices_spinner_margin"
            android:padding="@dimen/choose_devices_spinner_padding"
            android:background="@color/light_grey"
            app:layout_constraintStart_toEndOf="@id/device_selection_barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_devices_title_tv"
            app:layout_constraintBottom_toTopOf="@id/audio_output_spinner" />

        <Spinner
            android:id="@+id/audio_output_spinner"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/choose_devices_spinner_margin"
            android:padding="@dimen/choose_devices_spinner_padding"
            android:background="@color/light_grey"
            app:layout_constraintStart_toEndOf="@id/device_selection_barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/audio_input_spinner"
            app:layout_constraintBottom_toTopOf="@id/video_input_spinner" />

        <Spinner
            android:id="@+id/video_input_spinner"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/choose_devices_spinner_margin"
            android:padding="@dimen/choose_devices_spinner_padding"
            android:background="@color/light_grey"
            app:layout_constraintStart_toEndOf="@id/device_selection_barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/audio_output_spinner"
            app:layout_constraintBottom_toTopOf="@id/video_codec_spinner" />

        <Spinner
            android:id="@+id/video_codec_spinner"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/choose_devices_spinner_margin"
            android:padding="@dimen/choose_devices_spinner_padding"
            android:background="@color/light_grey"
            app:layout_constraintStart_toEndOf="@id/device_selection_barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video_input_spinner"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
